# ztr

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  SPEC.md
.github/workflows/: ci.yml
benchmarks/: bench_main.c
docs/: API.md  DESIGN_DISCUSSION.md  SPEC.md
fuzz/: fuzz_parse.c
src/: ztr.c  ztr.h
tests/: test_accessors.c  test_comparison.c  test_edge_cases.c  test_helpers.h  test_interop.c  test_lifecycle.c  test_main.c  test_mutation.c  test_search.c  test_split_join.c  test_transform.c  test_utf8.c  test_view.c
